# the-moon-ecosystem

./: .env.example  .gitignore  APEX_CODEX.md  CLAUDE.md  DEPLOY.md  MOON_CODEX.md  MOON_STACK_FINAL_STATUS.md  MOON_STACK_IMPLEMENTATION.md  MOON_STATUS.md  README.md  SYSTEM_DIAGNOSIS_REPORT.md  demo_apex_real.py  evaluation_criteria.yaml  install_docker.sh  install_moon_service.sh  main.py  moon-telegram-bot.service  moon_sync.py  pyproject.toml  pytest.ini  requirements-telegram.txt  requirements.txt  research_report.html  run_bot.py  start_dashboard.sh  test_routing.py  test_supabase_connection.py  the-moon.service  update_moon_status.py  validate_moon_stack.py  validate_supabase.py  verify_alchemist.py  verify_devops.py  verify_economics.py  verify_hardware.py  verify_nexus.py  verify_omni_channel.py
.gstack/: browse.json
Super-Agente/: tsconfig.json
agents/: __init__.py  api_discovery.py  architect.py  autonomous_devops_refactor.py  autonomy_evolution_agent.py  betting_analyst.py  blog.py  blog_pipeline_agent.py  browser_pilot.py  codex_updater.py  context.py  crawler.py  data_pipeline_agent.py  deep_web_research_agent.py  desktop.py  desktop_control_agent.py  economic_sentinel.py  email_agent.py  evaluator.py  file_manager.py  github_agent.py  github_agent.py.bak_20260315_093203  gmail_agent.py  hardware_synergy_bridge.py  hedge_agent.py  linux_native_agent.py  llm.py  memory_agent.py  moon_browser_agent.py  moon_cli_agent.py  moon_observer_agent.py  moon_plan_agent.py  moon_qa_agent.py  moon_review_agent.py  moon_sentinel.py  moon_ship_agent.py  news_monitor.py  (+24 more)
(+828 files in other folders)
